--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="%PUBLIC_URL%/lotto-generator.jpg" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lotto generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
